--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile.1.4.5.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <!-- temporarily moved to head whilst we develop app...-->
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
@@ -36,11 +36,183 @@
 <body>
 
 <!-- page1 -->
-    <div data-role="page" id="page1">
+    <div data-role="page" id="homePage">
         <div data-role="header">
-            <h3>CrunchTime</h3>
+            <h2>CrunchTime</h2>
+            <div data-role="collapsible">
+            <a href="#loginPage" class="ui-btn ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-icon-left" >Bars Icon</a></div>
+            <!--<a href="#loginPage" >Login</a>-->
+            <!--<a href="#signUpPage" >Register</a>-->
+            <!--<a href="#aboutUsPage" >AboutUs</a>-->
+        </div>
+        <div class="time1" content="ui-content">
+            <form id="tp1" method="post" action="#homePage">
+                <label for="time1" >Time Preference</label>
+                <select name="time1" id="time1">
+                    <option value="any">Any</option>
+                    <option value="15">00:15</option>
+                    <option value="30">00:30</option>
+                    <option value="45">00:45</option>
+                    <option value="1">01:00</option>
+                    <option value="1.15">01:15</option>
+                    <option value="1.30">01:30</option>
+                    <option value="more"> > 01:30 </option>
+                </select>
+                </fieldset>
+                </form>
+        <div data-role="main", content="ui-content">
+            <div class="ui-grid-x">
+
+                <div class = "ui-block-a">
+                    <span><a href="#">
+                        <img src="../www/img/burritoBowl.jpg" class="ui-li-thumb">
+
+                        <p>Burrito Bowl</p>
+
+                    </a></span></div>
+                    <div class="ui-block-b"><span><a href="#">
+                        <img src="../www/img/taco.jpg" class="ui-li-thumb">
+
+                        <p>Crispy Corn Tacos</p>
+
+                    </a></span></div>
+                    <div class ="ui-block-a"><span><a href="#">
+                        <img src="../www/img/salad.jpg" class="ui-li-thumb">
+
+                        <p>Salad</p>
+
+                    </a></span></div>
+                    <div class="ui-block-b"><span><a href="#">
+                        <img src="../www/img/sandwich.jpg" class="ui-li-thumb">
+
+                        <p>Sandwich</p>
+
+                    </a></span></div>
+                    <div class="ui-block-a"><span><a href="#">
+                        <img src="../www/img/fries.jpg" class="ui-li-thumb">
+
+                        <p>Fries</p>
+
+                    </a></span></div>
+                    <div class="ui-block-b"><span><a href="#">
+                        <img src="../www/img/burger.jpg" class="ui-li-thumb">
+
+                        <p>Burger</p>
+
+                    </a></span></div>
+
+
+
+            </div><!-- /content -->
+    </div>
      </div>
         </div>
+
+
+        <div data-role="popup" id= "loginPage" class="ui-content">
+        <form id = "login" method="post" action="#myPage">
+            <h3>Login</h3>
+
+                <label for="usrnm" class="ui-hidden-accessible">Username:</label>
+                <input type="text" name="user" id="usrnm" placeholder="Username"><br>
+                <label for="pswd" class="ui-hidden-accessible">Password:</label>
+                <input type="password" name="passw" id="pswd" placeholder="Password"><br>
+                <label for="log">Keep me logged in</label>
+                <input type="checkbox" name="login" id="log" value="1" data-mini="true"><br>
+                <input type="submit" data-inline="true" value="Log in">
+            <!--<label for="username">Username: </label>-->
+            <!--<input type="text" name="username" id="username"><br>-->
+
+                <!--<label for="password">Password:</label>-->
+            <!--<input type="text" name="password" id="password"><br>-->
+            <!--<input type="submit" data-inline="true" value="Login">-->
+        </form>
+    </div>
+        </div>
+    </div>
+
+    <div data-role="page" id="signUpPage" data-dialog="true">
+        <form id = "signUp" method="post" action="#myPage">
+            <h3>Register</h3>
+            <label for="firstname">Firstname </label>
+            <input type="text" name="firstname" id="firstname"><br>
+            <label for="lastname">Lastname</label>
+            <input type="text" name="lastname" id="lastname"><br>
+            <label for="dob">Date Of Birth: </label>
+            <input type="text" name="dob" id="dob"><br>
+            <label for="email">Email:</label>
+            <input type="text" name="email" id="email"><br>
+            <label for=pwd1>Password: </label>
+            <input type="text" name="pwd1" id="pwd1"><br>
+            <label for="pwd2">Confirm Password</label>
+            <input type="text" name="pwd2" id="pwd2"><br>
+            <input type="submit" data-inline="true" value="SignUp">
+
+        </form>
+    </div>
+
+    <div data-role="page" id="myPage">
+        <div data-role="header">
+            <h2>CrunchTime</h2>
+            </div>
+
+        </div>
+
+    <div data-role="page" id="searchPage">
+        <div data-role="header">
+        <h2>CrunchTime</h2>
+        </div>
+        <div data-role="main" content="ui-content">
+            <form method="post" action="#searchResultPage">
+            <div data-role="controlgroup" data-type="horizontal">
+                <label for="veg">Veg</label>
+                <input type="checkbox" name="pref" id="veg" value="veg">
+                <label for="nonVeg">Non-Veg</label>
+                <input type="checkbox" name="pref" id="nonVeg" value="nonVeg">
+                <label for="vegan">Vegan</label>
+                <input type="checkbox" name="pref" id="vegan" value="vegan">
+            </div><br>
+            <label for="ingredient">Ingredients:</label>
+            <input type="textarea" name="ingredient" id="ingredient"><br>
+        <label for="time">Time Preference</label>
+        <select name="time" id="time">
+            <option value="any">Any</option>
+            <option value="15">00:15</option>
+            <option value="30">00:30</option>
+            <option value="45">00:45</option>
+            <option value="1">01:00</option>
+            <option value="1.15">01:15</option>
+            <option value="1.30">01:30</option>
+            <option value="more"> > 01:30 </option>
+        </select>
+        </fieldset><br>
+        <input type="submit" data-inline="true" value="Submit">
+
+        </form>
+            </div>
+
+
+    </div>
+
+    <div data-role="page" id="searchResultPage">
+        <div data-role="header">
+        <h2>CrunchTime</h2>
+        </div>
+    </div>
+
+    <div data-role="page" id="aboutUsPage">
+        <div data-role="header">
+        <h2>CrunchTime</h2>
+        </div>
+        <div data-role="main" content="ui-content">
+            <h3>About Us</h3>
+            <h4>Sonia Lin</h4>
+            <p>abcabcabacabaa</p>
+
+            <h4>Chingari Patel</h4>
+            <p>xyzxyzigdyedljdhdsld</p>
+            </div>
+    </div>
+
     </body>
 </html>
-
