--- a/www/index.html
+++ b/www/index.html
@@ -23,30 +23,24 @@
 
 <!-- page1 -->
     <div data-role="page" id="homePage">
-        <div id= "header" data-role="header" content="ui-content" >
+        <div id="header" data-role="header" content="ui-content" >
             <h1>CrunchTime</h1>
-            <!--<ul class="menu-right" data-role="menu">-->
-
-                    <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
+                 <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
                     <ul class= "one" data-role="listview" data-inset="true">
-                        <li data-icon="false"><a href="#loginPage">Login</a></li>
-                        <li data-icon="false"><a href="#signUpPage">Register</a></li>
+                        <li data-icon="false"><a href="#loginPage" data-rel="popup">Login</a></li>
+                        <li data-icon="false"><a href="#signUpPage" data-rel="popup">Register</a></li>
                         <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
                     </ul>
-
-
-            <!--</ul>-->
-            <!--<a href=#loginPage class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext ">Bars Icon</a>-->
         </div>
 
 
 
 
-
-        <div class="time1" content="ui-content">
+        <div class="tp">
+        <div id="time1" content="ui-content">
                 <label for="time1">Have these items in </label></div>
-                <div class="time1-o">
-                <select name="time1" id="time1" data-inline="true" data-mini="true">
+                <div id="time1-o">
+                <select name="time" id="time" data-inline="true" data-mini="true">
                     <option value="30">30 mins</option>
                     <option value="15">15 mins</option>
                     <option value="45">45 mins</option>
@@ -55,6 +49,7 @@
 
                 </select>
                     </div>
+            </div>
 
             <div class="search">
             <label for="search-basic" class="ui-hidden-accessible" data-mini="true">Search Input:</label>
@@ -84,7 +79,7 @@
                     <div class ="ui-block-a"><a href="#">
                         <img src="../www/img/salad.jpg" class="ui-li-thumb"></a><br>
 
-                        <span><p>Salad<br>by <a href="#">Chipotle</a></p></span>
+                        <span><p>Salad Bowl<br> Prepared by <a href="#">You</a></p></span>
 
                     </div>
                     <div class="ui-block-b"><a href="#">
@@ -95,36 +90,36 @@
                     </div>
             </div>
          </div>
-
+<!--Login Popup-->
         <div data-role="popup"  id="loginPage" class="ui-content">
             <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
             <form id ="login" method="post" action="#myPage">
                 <h3>Login/ <a href="#signUpPage">Sign Up</a></h3>
                 <label for="usrnm" class="ui-hidden-accessible">Username:</label>
-                <input type="text" name="user" id="usrnm" placeholder="Username"><br>
+                <input type="text" name="user" id="usrnm" placeholder="Username" data-mini="true">
                 <label for="pswd" class="ui-hidden-accessible">Password:</label>
-                <input type="password" name="pswd" id="pswd" placeholder="Password"><br>
+                <input type="password" name="pswd" id="pswd" placeholder="Password" data-mini="true">
                 <label for="log">Keep me logged in</label>
                 <input type="checkbox" name="login" id="log" value="1" data-mini="true"><br>
-                <input type="submit" data-inline="true" value="Log in">
+                <input type="submit" data-inline="true" value="Log in" data-mini="true">
             </form>
         </div>
 
 
-
+<!--sign up popup-->
         <div data-role="popup" id="signUpPage">
             <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
             <form id = "signUp" method="post" action="#myPage">
                 <h3>Register</h3>
-                <label for="firstname">Name </label>
-                <input type="text" name="firstname" id="firstname"><br>
-                <label for="email">Email:</label>
-                <input type="text" name="email" id="email"><br>
-                <label for=pwd1>Password: </label>
-                <input type="text" name="pwd1" id="pwd1"><br>
-                <label for="pwd2">Confirm Password</label>
-                <input type="text" name="pwd2" id="pwd2"><br>
-                <input type="submit" data-inline="true" value="SignUp">
+                <label for="firstname" class="ui-hidden-invisible">Name </label>
+                <input type="text" name="firstname" id="firstname" placeholder="Name" data-mini="true">
+                <label for="email" class="ui-hidden-invisible">Email:</label>
+                <input type="text" name="email" id="email" placeholder="Email" data-mini="true">
+                <label for=pwd1 class="ui-hidden-invisible">Password: </label>
+                <input type="text" name="pwd1" id="pwd1"placeholder="Password" data-mini="true">
+                <label for="pwd2" class="ui-hidden-invisible">Confirm Password</label>
+                <input type="text" name="pwd2" id="pwd2"  placeholder="Confirm Password" data-mini="true"><br>
+                <input type="submit" data-inline="true" value="SignUp" data-mini="true">
 
             </form>
         </div>
@@ -132,45 +127,97 @@
     </div>
 
 
-
+<!--myPage after loggin in-->
     <div data-role="page" id="myPage">
-        <div data-role="header">
+        <div id="header1" data-role="header">
             <h1>CrunchTime</h1>
+            <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
+            <ul class= "one" data-role="listview" data-inset="true">
+                <li data-icon="false"><a href="#loginPage">Logout</a></li>
+                <li data-icon="false"><a href="#homePage">Home</a></li>
+                <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
+            </ul>
+            </div>
+        <h3>Favorites</h3>
+        <div class="ui-grid-x">
+
+            <div class = "ui-block-a">
+                <a href="#">
+                    <img src="../www/img/burritoBowl.jpg" class="ui-li-thumb"></a><br>
+
+                <span>Burrito Bowl<br> by <a href="#" >Chipotle</a></p></span>
+
+            </div>
+            <div class="ui-block-b"><a href="#">
+                <img src="../www/img/taco.jpg" class="ui-li-thumb"></a>
+
+                <span><p>Crispy Corn Tacos<br>by <a href="#">Taco Bell</a></p></span>
+
             </div>
 
+
+            <h3>Previously browsed</h3>
+
+            <div class ="ui-block-a"><a href="#">
+                <img src="../www/img/salad.jpg" class="ui-li-thumb"></a><br>
+
+                <span><p>Salad Bowl<br> Prepared by <a href="#">You</a></p></span>
+
+            </div>
+            <div class="ui-block-b"><a href="#">
+                <img src="../www/img/burger.jpg" class="ui-li-thumb"></a>
+
+                <span><p>Burger<br>by <a href="#">McDonalds</a></p></span>
+
+            </div>
         </div>
 
-    <div data-role="page" id="searchPage">
-        <div data-role="header">
-        <h1>CrunchTime</h1>
         </div>
+
+<!--search page-->
+    <div data-role="page" id="searchPage">
+        <div id="header2" data-role="header">
+        <h1>CrunchTime</h1>
+            <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
+            <ul class= "one" data-role="listview" data-inset="true">
+                <li data-icon="false"><a href="#loginPage">Login</a></li>
+                <li data-icon="false"><a href="#signUpPage">Register</a></li>
+                <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
+            </ul>
+        </div><br><br>
         <div data-role="main" content="ui-content">
-            <br method="post" action="#searchResultPage">
-            <div data-role="controlgroup" data-type="horizontal" data-mini="true">
-                <label for="veg">Veg</label>
-                <input type="checkbox" name="pref" id="veg" value="veg">
-                <label for="vegan">Vegan</label>
-                <input type="checkbox" name="pref" id="vegan" value="vegan">
-            </div><br>
+            <form id="searchForm" method="post" action="#searchResultPage">
+
+            <label>
+                <input type="radio" name="radio-choice-0" id="radio-choice-0a" data-mini="true">Vegan
+            </label>
+            <label for="radio-choice-0b">Vegetarian</label>
+            <input type="radio" name="radio-choice-0" id="radio-choice-0b" class="custom" data-mini="true"><br>
+            <!--<div data-role="controlgroup" data-type="horizontal" data-mini="true">-->
+                <!--<label for="veg">Veg</label>-->
+                <!--<input type="checkbox" name="pref" id="veg" value="veg">-->
+                <!--<label for="vegan">Vegan</label>-->
+                <!--<input type="checkbox" name="pref" id="vegan" value="vegan">-->
+            <!--</div><br>-->
 
 
                 <div class="time2" content="ui-content">
                     <label for="time2">Time Preference</label></div>
                 <div class="time2-o">
                     <select name="time2" id="time2" data-inline="true" data-mini="true">
-                        <option value="30">00:30</option>
-                        <option value="15">00:15</option>
-                        <option value="45">00:45</option>
-                        <option value="1">01:00</option>
-                        <option value="1.15"> > 01:15</option>
+                        <option value="30">30 mins</option>
+                        <option value="15">15 mins</option>
+                        <option value="45">45 mins</option>
+                        <option value="1">1 hour</option>
+                        <option value="1.15"> > 1 hour</option>
 
                     </select>
-                </div><br>
+                </div><br><br>
             <label for="ingredient">Ingredients:</label>
-            <input type="textarea" name="ingredient" id="ingredient"><br>
+            <input type="textarea" name="ingredient" id="ingredient"><br><br>
 
 
-        <input type="submit" data-inline="true" value="Submit" data-mini="true">
+                <a href="#searchResultPage"><input type="submit" data-inline="true" value="Submit" data-mini="true"></a>
 
         </form>
             </div>
@@ -178,26 +225,79 @@
 
     </div>
 
+<!--search result page-->
     <div data-role="page" id="searchResultPage">
-        <div data-role="header">
+        <div id="header3" data-role="header">
         <h1>CrunchTime</h1>
+            <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
+            <ul class= "one" data-role="listview" data-inset="true">
+                <li data-icon="false"><a href="#loginPage">Logout</a></li>
+                <li data-icon="false"><a href="#homePage">Home</a></li>
+                <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
+            </ul>
+        </div>
+        <h3>Search Result</h3>
+        <div class="ui-grid-x">
+
+            <div class = "ui-block-a">
+                <a href="#">
+                    <img src="../www/img/burritoBowl.jpg" class="ui-li-thumb"></a><br>
+
+                <span>Burrito Bowl<br> by <a href="#" >Chipotle</a></p></span>
+
+            </div>
+            <div class="ui-block-b"><a href="#">
+                <img src="../www/img/taco.jpg" class="ui-li-thumb"></a>
+
+                <span><p>Crispy Corn Tacos<br>by <a href="#">Taco Bell</a></p></span>
+
+            </div>
+            <div class ="ui-block-a"><a href="#">
+                <img src="../www/img/salad.jpg" class="ui-li-thumb"></a><br>
+
+                <span><p>Salad Bowl<br> Prepared by <a href="#">You</a></p></span>
+
+            </div>
+            <div class="ui-block-b"><a href="#">
+                <img src="../www/img/burger.jpg" class="ui-li-thumb"></a>
+
+                <span><p>Burger<br>by <a href="#">McDonalds</a></p></span>
+
+            </div>
         </div>
     </div>
 
+<!--about us page-->
     <div data-role="page" id="aboutUsPage">
-        <div data-role="header">
+        <div id= "header4" data-role="header">
         <h1>CrunchTime</h1>
+            <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
+            <ul class= "one" data-role="listview" data-inset="true">
+                <li data-icon="false"><a href="#loginPage">Login</a></li>
+                <li data-icon="false"><a href="#signUpPage">Register</a></li>
+                <li data-icon="false"><a href="#homePage">Home</a></li>
+            </ul>
         </div>
         <div data-role="main" content="ui-content">
             <h3>About Us</h3>
-            <h4>Sonia Lin</h4>
-            <p>abcabcabacabaa</p>
 
-            <h4>Chingari Patel</h4>
-            <p>xyzxyzigdyedljdhdsld</p>
-            </div>
-    </div>
+            <p>CrunchTime is for early stage professionals and graduate students who are short of time and need quick ideas to stay energized and productive. We gather food items and recipes which we recommend per your need.</p>
+            <div data-role="main" content="ui-content">
+                <div class="ui-grid-x">
+
+                    <div class = "ui-block-a">
+                            <img src="../www/img/2.jpg" class="ui-li-thumb"><br>
+                            <span><p>Sonia Lin</p></span>
+                    </div>
+                    <div class="ui-block-b">
+                        <img src="../www/img/1.jpg" class="ui-li-thumb">
+                        <span><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chingari Patel</p></span>
+                    </div>
+                    </div>
 
 
-    </body>
+         </div>
+</div>
+</div>
+</body>
 </html>
