Fixed moving content upon menu click

--- a/www/index.html
+++ b/www/index.html
@@ -121,7 +121,7 @@
         <div id="header" data-role="header" content="ui-content" >
             <h1>CrunchTime</h1>
                  <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
-                    <ul class= "one" data-role="listview" data-inset="true">
+                    <ul class= "one nav-menu" data-role="listview" data-inset="true">
                         <li data-icon="false"><a href="#loginPage" data-rel="popup">Login</a></li>
                         <li data-icon="false"><a href="#signUpPage" data-rel="popup">Register</a></li>
                         <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
@@ -344,7 +344,7 @@
         <div id= "header4" data-role="header">
         <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
-            <ul class= "one" data-role="listview" data-inset="true">
+            <ul class= "one nav-menu" data-role="listview" data-inset="true">
                 <li data-icon="false"><a href="#loginPage">Login</a></li>
                 <li data-icon="false"><a href="#signUpPage">Register</a></li>
                 <li data-icon="false"><a href="#homePage">Home</a></li>
