--- a/www/index.html
+++ b/www/index.html
@@ -205,7 +205,7 @@
             <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
             <ul class= "one" data-role="listview" data-inset="true">
-                <li data-icon="false"><a href="#loginPage">Logout</a></li>
+                <li data-icon="false"><a href="#homePage">Logout</a></li>
                 <li data-icon="false"><a href="#homePage">Home</a></li>
                 <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
             </ul>
@@ -303,7 +303,7 @@
         <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
             <ul class= "one" data-role="listview" data-inset="true">
-                <li data-icon="false"><a href="#loginPage">Logout</a></li>
+                <li data-icon="false"><a href="#homePage">Logout</a></li>
                 <li data-icon="false"><a href="#homePage">Home</a></li>
                 <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
             </ul>
@@ -353,7 +353,7 @@
         <div data-role="main" content="ui-content">
             <h3>About Us</h3>
 
-            <p>CrunchTime is for early stage professionals and graduate students who are short of time and need quick ideas to stay energized and productive. We gather food items and recipes which we recommend per your need.</p>
+            <p id="p1">CrunchTime is for early stage professionals and graduate students who are short of time and need quick ideas to stay energized and productive. We gather food items and recipes which we recommend per your need.</p>
             <div data-role="main" content="ui-content">
                 <div class="ui-grid-x">
 
