--- a/www/index.html
+++ b/www/index.html
@@ -351,13 +351,13 @@
 
             <p id="p1">CrunchTime is for early stage professionals and graduate students who are short of time and need quick ideas to stay energized and productive. We gather food items and recipes which we recommend per your need.</p>
             <div data-role="main" content="ui-content">
-                <div class="ui-grid-x">
+                <div class="ui-grid-z">
 
-                    <div class = "ui-block-a">
+                    <div class = "ui-block-c">
                             <img src="../www/img/2.jpg" class="ui-li-thumb"><br>
                             <span><p>Sonia Lin</p></span>
                     </div>
-                    <div class="ui-block-b">
+                    <div class="ui-block-d">
                         <img src="../www/img/1.jpg" class="ui-li-thumb">
                         <span><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chingari Patel</p></span>
                     </div>
