--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
@@ -12,6 +12,7 @@
     <!-- temporarily moved to head whilst we develop app...-->
     <script type="text/javascript" src="js/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <script type="text/javascript" src="js/index.js"></script>
@@ -53,7 +54,7 @@
       }
 
       var watchID = navigator.geolocation.watchPosition(onSuccess, onError, { timeout: 30000 });
-      
+
       function populateDB() {
         db.transaction(function(tx) {
           tx.executeSql('DROP TABLE FoodItem');
@@ -153,9 +154,9 @@
         <div id="header" data-role="header" content="ui-content" >
             <h1>CrunchTime</h1>
                  <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
-                    <ul class= "one nav-menu" data-role="listview" data-inset="true">
-                        <li data-icon="false"><a href="#loginPage" data-rel="popup">Login</a></li>
-                        <li data-icon="false"><a href="#signUpPage" data-rel="popup">Register</a></li>
+                    <ul class= "one nav-menu" data-role="listview" data-inset="true" data-transition="slidedown">
+                        <li data-icon="false"><a href="#loginPage" data-rel="popup" data-position-to="window" data-transition="pop">Login</a></li>
+                        <li data-icon="false"><a href="#signUpPage" data-rel="popup" data-position-to="window" data-transition="pop">Register</a></li>
                         <li data-icon="false"><a href="#myPage">My Page</a></li>
                         <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
                     </ul>
@@ -218,13 +219,13 @@
             <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
             <form id = "signUp" method="post" action="#myPage">
                 <h3>Register</h3>
-                <label for="firstname" class="ui-hidden-invisible">Name </label>
+                <label for="firstname" class="ui-hidden-accessible">Name </label>
                 <input type="text" name="firstname" id="firstname" placeholder="Name" data-mini="true">
-                <label for="email" class="ui-hidden-invisible">Email:</label>
+                <label for="email" class="ui-hidden-accessible">Email:</label>
                 <input type="text" name="email" id="email" placeholder="Email" data-mini="true">
-                <label for=pwd1 class="ui-hidden-invisible">Password: </label>
+                <label for=pwd1 class="ui-hidden-accessible">Password: </label>
                 <input type="text" name="pwd1" id="pwd1"placeholder="Password" data-mini="true">
-                <label for="pwd2" class="ui-hidden-invisible">Confirm Password</label>
+                <label for="pwd2" class="ui-hidden-accessible">Confirm Password</label>
                 <input type="text" name="pwd2" id="pwd2"  placeholder="Confirm Password" data-mini="true"><br>
                 <input type="submit" data-inline="true" value="SignUp" data-mini="true">
 
@@ -256,14 +257,19 @@
 
             </div>
             <div class="ui-block-b"><a href="#">
-                <img src="../www/img/taco.jpg" class="ui-li-thumb"></a>
+                <img src="../www/img/taco.jpg" class="ui-li-thumb"></a></br>
 
                 <span><p>Crispy Corn Tacos<br>by <a href="#">Taco Bell</a></p></span>
 
             </div>
 
+        </div>
 
-            <h3>Previously browsed</h3>
+
+        <h3>Previously browsed</h3>
+
+            <div class="ui-grid-x">
+
 
             <div class ="ui-block-a"><a href="#">
                 <img src="../www/img/salad.jpg" class="ui-li-thumb"></a><br>
@@ -277,6 +283,7 @@
                 <span><p>Burger<br>by <a href="#">McDonalds</a></p></span>
 
             </div>
+
         </div>
 
         </div>
@@ -286,7 +293,7 @@
         <div id="header2" data-role="header">
         <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
-            <ul class= "one" data-role="listview" data-inset="true">
+            <ul class= "one nav-menu" data-role="listview" data-inset="true">
                 <li data-icon="false"><a href="#loginPage">Login</a></li>
                 <li data-icon="false"><a href="#signUpPage">Register</a></li>
                 <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
@@ -295,17 +302,10 @@
         <div data-role="main" content="ui-content">
             <form id="searchForm" method="post" action="#searchResultPage">
 
-            <label>
-                <input type="radio" name="radio-choice-0" id="radio-choice-0a" data-mini="true">Vegan
-            </label>
+            <label><input type="radio" name="radio-choice-0" id="radio-choice-0a" data-mini="true">Vegan </label>
             <label for="radio-choice-0b">Vegetarian</label>
             <input type="radio" name="radio-choice-0" id="radio-choice-0b" class="custom" data-mini="true"><br>
-            <!--<div data-role="controlgroup" data-type="horizontal" data-mini="true">-->
-                <!--<label for="veg">Veg</label>-->
-                <!--<input type="checkbox" name="pref" id="veg" value="veg">-->
-                <!--<label for="vegan">Vegan</label>-->
-                <!--<input type="checkbox" name="pref" id="vegan" value="vegan">-->
-            <!--</div><br>-->
+
 
 
                 <div class="time2" content="ui-content">
@@ -337,7 +337,7 @@
         <div id="header3" data-role="header">
         <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
-            <ul class= "one" data-role="listview" data-inset="true">
+            <ul class= "one nav-menu" data-role="listview" data-inset="true">
                 <li data-icon="false"><a href="#homePage">Logout</a></li>
                 <li data-icon="false"><a href="#homePage">Home</a></li>
                 <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
@@ -380,8 +380,8 @@
         <h1>CrunchTime</h1>
             <span data-role="button" class="ui-btn ui-btn-right ui-corner-all ui-icon-bars ui-btn-icon-notext"style= "margin-top: 8px" onclick="menuContentShow()">Bars Icon</span>
             <ul class= "one nav-menu" data-role="listview" data-inset="true">
-                <li data-icon="false"><a href="#loginPage">Login</a></li>
-                <li data-icon="false"><a href="#signUpPage">Register</a></li>
+                <li data-icon="false"><a href="#loginPage" data-rel="popup" data-position-to="window" data-transition="pop">Login</a></li>
+                <li data-icon="false"><a href="#signUpPage" data-rel="popup" data-position-to="window" data-transition="pop">Register</a></li>
                 <li data-icon="false"><a href="#homePage">Home</a></li>
             </ul>
         </div>
