--- a/www/index.html
+++ b/www/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
 
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
 
 
     <!-- temporarily moved to head whilst we develop app...-->
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/crunchtime.js"></script>
-
+    <script type="text/javascript" src="js/jquery.mobile.update.js"></script>
     <script src="cordova.js"></script>
     <script>
 
@@ -248,7 +248,7 @@
                     <ul class= "one nav-menu" data-role="listview" data-inset="true" data-transition="slidedown">
                         <li data-icon="false"><a href="#loginPage" data-rel="popup" data-position-to="window" data-transition="pop" >Login</a></li>
                         <li data-icon="false"><a href="#signUpPage" data-rel="popup" data-position-to="window" data-transition="pop">Register</a></li>
-                        <li data-icon="false"><a href="#myPage">My Page</a></li>
+                        <!--<li data-icon="false"><a href="#myPage">My Page</a></li>-->
                         <li data-icon="false"><a href="#aboutUsPage">About Us</a></li>
                         <li data-icon="false"><a href="#homePage" onclick="reloadListing()">Home</a></li>
                     </ul>
@@ -261,7 +261,7 @@
         <div id="time1" content="ui-content">
                 <label for="time1">Have these items in </label></div>
                 <div id="time1-o">
-                <select name="time" id="time-selector" data-inline="true" data-mini="true">
+                <select name="time" id="time-selector" data-inline="true" data-mini="true" >
                     <option value="30">30 mins</option>
                     <option value="15">15 mins</option>
                     <option value="45">45 mins</option>
@@ -326,8 +326,8 @@
                 <input type="text" name="email" id="email" placeholder="Email" value="" data-mini="true">
                 <label for="pwd" class="ui-hidden-accessible">Password: </label>
                 <input type="text" name="pwd" id="pwd"placeholder="Password" value="" data-mini="true">
-                <a target="_blank" href="javascript:addUser()" style="text-decoration: none"><button>Register</button></a>
-                <!--<input type="submit" data-inline="true" value="SignUp" data-mini="true">-->
+                <!--<a target="_blank" href="javascript:addUser()" style="text-decoration: none"><button style="width: 150px; margin:0 auto; margin-bottom: 10px">Register</button></a>-->
+                <input type="submit" data-inline="true" value="SignUp" data-mini="true">
 
             </form>
         </div>
@@ -350,7 +350,7 @@
         <div class="ui-grid-x">
 
             <div class = "ui-block-a">
-                <a href="#" class="ui-btn ui-corner-all ui-icon-heart ui-btn-icon-notext">Heart Icon</a>
+
                 <a href="#">
                     <img src="../www/img/burritoBowl.jpg" class="ui-li-thumb"></a><br>
 
@@ -410,7 +410,7 @@
           <div class="search">
             <form action="javascript:advancedSearch();">
               <div class="time2" content="ui-content">
-                <label for="time2">Time Preference</label>
+                <label for="time-selector2">Time Preference</label>
               </div>
               <div class="time2-o">
                 <select name="time2" id="time-selector2" data-inline="true" data-mini="true">
@@ -422,9 +422,9 @@
                 </select>
               </div><br /></br />
                 
-              <label for="ingredient">Ingredients</label>
+              <label for="ingredients-search">Ingredients</label>
               <input type="textarea" name="ingredients-search" id="ingredients-search"><br><br>
-              <label for="food-item-name">Food Item Name</label>
+              <label for="advanced-search">Food Item Name</label>
               <input type="search" name="advancedSearch" id="advanced-search" placeholder="search" style="text-align: center" />
               <input type="submit" data-inline="true" value="Submit" data-mini="true">
             </form>
