login code added

--- a/www/index.html
+++ b/www/index.html
@@ -309,9 +309,10 @@
                 <input type="text" name="username" id="username" placeholder="Username" value="" data-mini="true">
                 <label for="pswd" class="ui-hidden-accessible">Password:</label>
                 <input type="password" name="pswd" id="pswd" placeholder="Password" value="" data-mini="true">
+                <button id="loginButton">Login</button>
                 <!--<label for="log">Keep me logged in</label>-->
                 <!--<input type="checkbox" name="login" id="log" value="1" data-mini="true"><br>-->
-                <input type="submit" data-inline="true" value="Log in" data-mini="true">
+                <!--<input type="submit" data-inline="true" value="Log in" data-mini="true">-->
             </form>
         </div>
 
@@ -326,8 +327,9 @@
                 <input type="text" name="email" id="email" placeholder="Email" value="" data-mini="true">
                 <label for="pwd" class="ui-hidden-accessible">Password: </label>
                 <input type="text" name="pwd" id="pwd"placeholder="Password" value="" data-mini="true">
-                <!--<a target="_blank" href="javascript:addUser()" style="text-decoration: none"><button style="width: 150px; margin:0 auto; margin-bottom: 10px">Register</button></a>-->
-                <input type="submit" data-inline="true" value="SignUp" data-mini="true">
+                <button style="width: 150px; margin:0 auto; margin-bottom: 10px" onclick="addUser();">Register</button>
+                <!--<a target="_blank" href="javascript:" style="text-decoration: none"><button style="width: 150px; margin:0 auto; margin-bottom: 10px">Register</button></a>-->
+                <!--<input type="submit" data-inline="true" value="SignUp" data-mini="true">-->
 
             </form>
         </div>
